# Todo-project

./: LICENSE  README.md
backend/: .gitignore  pyproject.toml
backend/app/: db_seeder.py  main.py
backend/app/config/: config.py  db.py  security_conf.py
backend/app/modals/: Modals.py  __init__.py
backend/app/routes/: auth.py  projects.py  tasks.py  websockets.py
backend/app/schemas/: Auth.py  Projects.py  Tasks.py  Websockets.py
backend/app/utils/: auth_utils.py
backend/app/websockets/: manager.py
frontend/: build_code.txt  package copy.json  package-lock.json  package.json  vite.config.js
frontend/electron/: main.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/admin/: AddUserModal.jsx
frontend/src/components/auth/: Login.jsx
frontend/src/components/board/: BoardColumn.jsx  CreateTaskModal.jsx  TaskCard.jsx  TaskDetailsModal.jsx
frontend/src/components/layout/: Header.jsx  MainLayout.jsx  Sidebar.jsx
frontend/src/components/projects/: CreateProjectModal.jsx  ManageProjectMembersModal.jsx  RenameProjectModal.jsx
frontend/src/context/: AuthContext.jsx  WebSocketContext.jsx
frontend/src/pages/: ManageUsers.jsx  ProjectBoard.jsx
